[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Management/LevelBase/CamControl.gd" type="Script" id=1]
[ext_resource path="res://Scenes/NewLevels/LevelBase.gd" type="Script" id=2]
[ext_resource path="res://Scenes/NewLevels/Spatial.gd" type="Script" id=3]
[ext_resource path="res://Assets/Textures/play.png" type="Texture" id=4]
[ext_resource path="res://Assets/Textures/rewind.png" type="Texture" id=5]

[sub_resource type="Animation" id=11]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0.0862745, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 14, 14 ), Vector2( 25, 25 ), Vector2( 14, 14 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_pivot_offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 7, 0 ), Vector2( 12.5, 25 ), Vector2( 7, 0 ) ]
}

[node name="LevelBase" type="Spatial"]
script = ExtResource( 2 )

[node name="Kinematics" type="Spatial" parent="."]

[node name="Rigids" type="Spatial" parent="."]

[node name="Statics" type="StaticBody" parent="."]

[node name="Reactants" type="Spatial" parent="."]

[node name="CamControl" type="Spatial" parent="."]
script = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="CamControl"]
script = ExtResource( 3 )

[node name="Camera" type="Position3D" parent="CamControl/Spatial"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 5 )

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 3, 5 )
cull_mask = 1
target = NodePath("../CamControl/Spatial/Camera")
speed = 20.0
enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -42.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1920.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 614.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Play" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 618.0
margin_right = 648.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/HBoxContainer"]
margin_left = 652.0
margin_right = 1266.0
margin_bottom = 30.0
size_flags_horizontal = 3
size_flags_vertical = 1
max_value = 5.0
percent_visible = false

[node name="Rewind" type="TextureButton" parent="VBoxContainer/HBoxContainer"]
margin_left = 1270.0
margin_right = 1300.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
rect_pivot_offset = Vector2( 7, 0 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 4

[node name="RewindAnimationPlayer" type="AnimationPlayer" parent="VBoxContainer/HBoxContainer/Rewind"]
anims/FlashRewind = SubResource( 11 )

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 1304.0
margin_right = 1920.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="VBoxContainer"]
margin_top = 34.0
margin_right = 1920.0
margin_bottom = 42.0
rect_min_size = Vector2( 0, 8 )

[node name="SimulatedTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Play" to="." method="_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Rewind" to="." method="rewind_pressed"]
[connection signal="timeout" from="SimulatedTimer" to="." method="simulation_timeout"]
